import java.util.stream.Collectors

/*
 * Copyright 2021 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

plugins {
    id 'application'
    id 'java'
    id 'org.springframework.boot' version '3.3.3'
}

repositories {
    mavenCentral()
}

bootRun {
    mainClassName = 'com.main_owner_service.api.MainOwnerServiceApplication'
}

group = 'demo'
version = '1.0.0-SNAPSHOT'
description = 'Spring Cloud GCP Pub/Sub Code Sample'
java.sourceCompatibility = JavaVersion.VERSION_21


//tasks.withType(JavaCompile).configureEach {
//    options.compilerArgs << '-parameters'
//}

compileJava {
    //inputs.property("moduleName", moduleName)
    doFirst {

       options.compilerArgs = [
               '--module-path', classpath.asPath,
        ]
   //     classpath = files()

  //      '--add-modules'
   //     '/home/pawel/.gradle/caches/modules-2/files-2.1/com.google.cloud/spring-cloud-gcp-pubsub/5.6.1/cadd0fe84ed4094c6203eb748405cf5cd0cebfcd/spring-cloud-gcp-pubsub-5.6.1.jar'

 //       var compilerArgs = new ArrayList<>(options.compilerArgs)  //new ArrayList<>(options.getAllCompilerArgs())

 //       compilerArgs.add('--module-path')
 //       compilerArgs.add(":/home/pawel/.gradle/caches/modules-2/files-2.1/com.google.cloud/spring-cloud-gcp-pubsub/5.6.1/cadd0fe84ed4094c6203eb748405cf5cd0cebfcd/spring-cloud-gcp-pubsub-5.6.1.jar")

        System.out.println(options.compilerArgs.stream().collect(Collectors.joining("\n\n")).replace(":", "\n"))

  //      options.compilerArgs = compilerArgs

  //      String modulePath = compilerArgs.stream().filter(s -> s.startsWith('--module-path')).findAny().orElseThrow();
   //     int i = compilerArgs.indexOf(modulePath)
    //    compilerArgs.set(i, modulePath + ":/home/pawel/.gradle/caches/modules-2/files-2.1/com.google.cloud/spring-cloud-gcp-pubsub/5.6.1/cadd0fe84ed4094c6203eb748405cf5cd0cebfcd/spring-cloud-gcp-pubsub-5.6.1.jar")

    }
}

dependencies {
    implementation(
            project(':main-owner-service:domain'),
            'com.google.cloud:spring-cloud-gcp-starter-pubsub:5.6.1',
            'org.springframework.boot:spring-boot-starter-web:3.3.3',
            'org.springframework.integration:spring-integration-core:6.3.4',
    )
    testImplementation(
            'junit:junit:4.13.2',
            'org.springframework.boot:spring-boot-test-autoconfigure:3.3.3',
    )
}
